@@ -1011,15 +1011,15 @@ public class GraphHopper implements GraphHopperAPI {
         readLock.lock();
         try {
             if (!request.getVehicle().isEmpty())
-                throw new IllegalArgumentException("GHRequest may no longer contain a vehicle, use the profile parameter instead, see #todonow");
+                throw new IllegalArgumentException("GHRequest may no longer contain a vehicle, use the profile parameter instead, see #1958");
             if (!request.getWeighting().isEmpty())
-                throw new IllegalArgumentException("GHRequest may no longer contain a weighting, use the profile parameter instead, see #todonow");
+                throw new IllegalArgumentException("GHRequest may no longer contain a weighting, use the profile parameter instead, see #1958");
             if (request.getHints().has(Routing.TURN_COSTS))
-                throw new IllegalArgumentException("GHRequest may no longer contain the turn_costs=true/false parameter, use the profile parameter instead, see #todonow");
+                throw new IllegalArgumentException("GHRequest may no longer contain the turn_costs=true/false parameter, use the profile parameter instead, see #1958");
             if (request.getHints().has(Routing.EDGE_BASED))
-                throw new IllegalArgumentException("GHRequest may no longer contain the edge_based=true/false parameter, use the profile parameter instead, see #todonow");
+                throw new IllegalArgumentException("GHRequest may no longer contain the edge_based=true/false parameter, use the profile parameter instead, see #1958");
 
-            // todonow: do not allow things like short_fastest.distance_factor or u_turn_costs unless CH is disabled and only under certain conditions for LM
+            // todo later: do not allow things like short_fastest.distance_factor or u_turn_costs unless CH is disabled and only under certain conditions for LM
 
             HintsMap hints = request.getHints();
             boolean disableCH = hints.getBool(CH.DISABLE, false);
@@ -1048,7 +1048,7 @@ public class GraphHopper implements GraphHopperAPI {
             checkIfPointsAreInBounds(points);
 
             if (Helper.isEmpty(request.getProfile())) {
-                throw new IllegalArgumentException("You need to specify a profile to perform a routing request, see #todonow");
+                throw new IllegalArgumentException("You need to specify a profile to perform a routing request, see #1958");
             }
             ProfileConfig profile = profilesByName.get(request.getProfile());
             if (profile == null) {
