@@ -1,4 +1,6 @@
 1.0
+    removed vehicle,weighting and edge_based from GraphHopper class, replaced with new profile parameter, #1958
+    all routing profiles have to be configured when setting up GraphHopper, #1958
     removed IPFilter. Use a firewall instead.
     PMap refactored. It is recommended to use putObject(String, Object) instead of put, #1956
     removed UnsafeDataAccess as not maintained, see #1620
